k8s/infra/observability/vm/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-vmagent
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmsingle
      app.kubernetes.io/instance: vm
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: vmks
            app.kubernetes.io/name: vmagent
            k8s:io.kubernetes.pod.namespace: core-observability
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-vector
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vlogs
      app.kubernetes.io/instance: vm
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: core-observability
            app.kubernetes.io/name: vector
            app.kubernetes.io/instance: vector
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-egress-namespace
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
