k8s/infra/observability/vm/vlogs.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-promtail
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: core-observability
            app.kubernetes.io/name: promtail
            app.kubernetes.io/instance: promtail
